[gd_scene load_steps=5 format=2]

[ext_resource path="res://models/gui/TextBox/TextBox.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PrStart.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="TextBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
letter_delay = 0.01

[node name="Box" type="ColorRect" parent="."]
margin_top = 360.0
margin_right = 480.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 0.698039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
margin_left = 29.0
margin_top = 408.0
margin_right = 439.0
margin_bottom = 464.0
custom_fonts/font = SubResource( 1 )
text = "Default text for Testing..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName" type="Label" parent="."]
margin_left = 29.0
margin_top = 376.0
margin_right = 253.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 2 )
text = "Character Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTime" type="Timer" parent="."]
wait_time = 0.045
[connection signal="timeout" from="MessageTime" to="." method="_on_CharacterTime_timeout"]
